--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
 
 </head>
 
-
 <body>
 
 
@@ -122,151 +121,145 @@
 
 
 
+    <div class="wrap">
+        <div class="PC_left_aera">
+
+            <main class="main_box">
+
+                <section class="main">
+                    <div class="main_inner">
+                        <p class="inner_text">PERSON OF THE YEAR</p>
+                        <p class="inner_title">BARACK <br> OMAMA</p>
+                    </div>
+                </section>
 
 
-    <div class="PC_left_aera">
+                <section class="main_img_box">
+                    <div class="main_img">
+                        <img src="./public/images/main.png" alt="main_img">
+                    </div>
+                </section>
 
-        <main class="main_box">
+            </main>
 
-            <section class="main">
-                <div class="main_inner">
-                    <p class="inner_text">PERSON OF THE YEAR</p>
-                    <p class="inner_title">BARACK <br> OMAMA</p>
+
+
+
+
+
+            <article class="article_box">
+                <h1>Person of the Year: Barack Obama, Architect of the New America</h1>
+                <p>The American people have rightly been frustrated at the pace of change, and the economy is still struggling, and this President we elected is imperfect. ‘Obama says.’ ‘And yet despite all that, this is who we want to be.’ <p class="italic">By Michael Scherer</p>
+                </p>
+            </article>
+
+
+            <section class="main_list">
+
+                <div class="article_list">
+                    <ul>
+                        <li>
+                            <i class="fas fa-circle"></i>
+                            Exclusive: The Person of the Tear Interview
+                        </li>
+                        <li>
+                            <i class="fab fa-youtube"></i>Inside the White House : Never · Before · Seen Photos
+                        </li>
+                        <li>
+                            <i class="fas fa-circle"></i>Re-Election. The Data Miners Who Helped Obama Win
+                        </li>
+                        <li>
+                            <i class="fab fa-youtube"></i>Obama Photo Diary: 48 Hours with the President
+                        </li>
+                        <li>
+                            <i class="fas fa-circle"></i>RunnerUp: Malalala’s Journey ― A Timeline
+                        </li>
+                        <li>
+                            <i class="fas fa-circle"></i>RunnerUp: Time Cook’s Greatest Apple Moments
+                        </li>
+                        <li>
+                            <i class="fas fa-circle"></i>RunnerUp: TIME Sits Down with Morsi
+                        </li>
+                        <li>
+                            <i class="fas fa-play-circle"></i> RunnerUp: What is the ‘God Particle’?
+                        </li>
+                        <li>
+                            <i class="fas fa-circle"></i> 2012 In Brief. The People Who Mattered Most
+                        </li>
+                        <li>
+                            <i class="fas fa-circle"></i> THose We Lost: TIME’s 2012 Tributes
+                        </li>
+                        <li>
+                            <i class="fas fa-circle"></i> Fareed Zakaria: Why Obama’s A lot Like lke
+                        </li>
+                        <li>
+                            <i class="fas fa-circle"></i> Joe Klein: The 2012 Awards for Political Courage
+                        </li>
+                        <li>
+                            <i class="fas fa-circle"></i> Joel Stein: 2012’s Coolest Person Is...
+                        </li>
+                        <li>
+                            <i class="fas fa-circle"></i> Live Reactions: What You’re Saying About #POY2012
+                        </li>
+                        <li>
+                            <i class="fas fa-circle"></i> Gallery: Men Who Were Person of the Year Twice
+                        </li>
+                    </ul>
                 </div>
+
+
+
+                <div class="short_list">
+                    <div class="line second_line"></div>
+
+                    <h1 class="short_list_tit title_all">
+                        Short List
+                    </h1>
+
+
+
+                    <div class="short_list_img1">
+                        <img src="./public/images/short_img1.png" alt="">
+                        <div class="short_text1 short_txt">
+                            <p>Malala Yousafzal</p>
+                        </div>
+                    </div>
+                    <div class="short_list_img2">
+                        <img src="./public/images/short_img2.png" alt="">
+                        <div class="short_text2 short_txt">
+                            <p>Tim Cook</p>
+                        </div>
+                    </div>
+                    <div class="short_list_img3">
+                        <img src="./public/images/short_img3.png" alt="">
+                        <div class="short_text3 short_txt">
+                            <p>Mohamed MorsI</p>
+                        </div>
+                    </div>
+                    <div class="short_list_img4">
+                        <img src="./public/images/short_img4.png" alt="">
+                        <div class="short_text4 short_txt">
+                            <p>Fablola Gianotti</p>
+                        </div>
+                    </div>
+                </div>
+
+
             </section>
-
-
-            <section class="main_img_box">
-                <div class="main_img">
-                    <img src="./public/images/main.png" alt="main_img">
-                </div>
-            </section>
-
-        </main>
+        </div>
 
 
 
 
-
-
-        <article class="article_box">
-            <h1>Person of the Year: Barack Obama, Architect of the New America</h1>
-            <p>The American people have rightly been frustrated at the pace of change, and the economy is still
-                struggling,
-                and this President we elected is imperfect. ‘Obama says.’ ‘And yet despite all that, this is who we want
-                to
-                be.’ <p class="italic">By Michael Scherer</p>
-            </p>
-        </article>
-
-
-        <section class="main_list">
-
-            <div class="article_list">
-                <ul>
-                    <li>
-                        <i class="fas fa-circle"></i>
-                        Exclusive: The Person of the Tear Interview
-                    </li>
-                    <li>
-                        <i class="fab fa-youtube"></i>Inside the White House : Never · Before · Seen Photos
-                    </li>
-                    <li>
-                        <i class="fas fa-circle"></i>Re-Election. The Data Miners Who Helped Obama Win
-                    </li>
-                    <li>
-                        <i class="fab fa-youtube"></i>Obama Photo Diary: 48 Hours with the President
-                    </li>
-                    <li>
-                        <i class="fas fa-circle"></i>RunnerUp: Malalala’s Journey ― A Timeline
-                    </li>
-                    <li>
-                        <i class="fas fa-circle"></i>RunnerUp: Time Cook’s Greatest Apple Moments
-                    </li>
-                    <li>
-                        <i class="fas fa-circle"></i>RunnerUp: TIME Sits Down with Morsi
-                    </li>
-                    <li>
-                        <i class="fas fa-play-circle"></i> RunnerUp: What is the ‘God Particle’?
-                    </li>
-                    <li>
-                        <i class="fas fa-circle"></i> 2012 In Brief. The People Who Mattered Most
-                    </li>
-                    <li>
-                        <i class="fas fa-circle"></i> THose We Lost: TIME’s 2012 Tributes
-                    </li>
-                    <li>
-                        <i class="fas fa-circle"></i> Fareed Zakaria: Why Obama’s A lot Like lke
-                    </li>
-                    <li>
-                        <i class="fas fa-circle"></i> Joe Klein: The 2012 Awards for Political Courage
-                    </li>
-                    <li>
-                        <i class="fas fa-circle"></i> Joel Stein: 2012’s Coolest Person Is...
-                    </li>
-                    <li>
-                        <i class="fas fa-circle"></i> Live Reactions: What You’re Saying About #POY2012
-                    </li>
-                    <li>
-                        <i class="fas fa-circle"></i> Gallery: Men Who Were Person of the Year Twice
-                    </li>
-                </ul>
-            </div>
-
-
-            <div class="short_list">
-
-
-                <h1 class="short_list_tit title_all">
-                    Short List
-                </h1>
-
-
-
-                <div class="short_list_img1">
-                    <img src="./public/images/short_img1.png" alt="">
-                    <div class="short_text1 short_txt">
-                        <p>Malala Yousafzal</p>
-                    </div>
-                </div>
-                <div class="short_list_img2">
-                    <img src="./public/images/short_img2.png" alt="">
-                    <div class="short_text2 short_txt">
-                        <p>Tim Cook</p>
-                    </div>
-                </div>
-                <div class="short_list_img3">
-                    <img src="./public/images/short_img3.png" alt="">
-                    <div class="short_text3 short_txt">
-                        <p>Mohamed MorsI</p>
-                    </div>
-                </div>
-                <div class="short_list_img4">
-                    <img src="./public/images/short_img4.png" alt="">
-                    <div class="short_text4 short_txt">
-                        <p>Fablola Gianotti</p>
-                    </div>
-                </div>
-            </div>
-
-
-        </section>
-    </div>
+        <!----------------- 구분선------------- -->
 
 
 
 
-    <!----------------- 구분선------------- -->
+        <section class="bottom_box PC_right_area">
 
+            <div class="line first_line"></div>
 
-
-
-    <section class="bottom_box">
-
-        <div class="line first_line"></div>
-
-        <div class="line second_line"></div>
-        <div class="PC_right_area">
 
             <div class="Person_Issue">
                 <h1 class="Person_Issue_txt title_all">
@@ -396,7 +389,8 @@
                             <li><a href="#!">
                                     <!-- 1 -->
                                     <p>1</p>
-                                    <p>Breaking Down the Ending of Netflix’s New Swedish Thriller A Nearly Normal Family
+                                    <p>Breaking Down the Ending of Netflix’s New Swedish Thriller A Nearly Normal
+                                        Family
                                     </p>
                                 </a></li>
                             <li><a href="#!">
@@ -415,7 +409,8 @@
                             <li><a href="#!">
                                     <!-- 4 -->
                                     <p>4</p>
-                                    <p>U.S. Virgin Islands Is in a State of Emergency Over Lead in Water. Here's What to
+                                    <p>U.S. Virgin Islands Is in a State of Emergency Over Lead in Water. Here's
+                                        What to
                                         Know
                                     </p>
                                 </a></li>
@@ -435,14 +430,16 @@
                             <li><a href="#!">
                                     <!-- 1 -->
                                     <p>1</p>
-                                    <p>South Korean Farmers Threaten to Release 2 Million Dogs in Protest of Dog Meat
+                                    <p>South Korean Farmers Threaten to Release 2 Million Dogs in Protest of Dog
+                                        Meat
                                         Ban
                                     </p>
                                 </a></li>
                             <li><a href="#!">
                                     <!-- 2 -->
                                     <p>2</p>
-                                    <p>As Freed Hostages Return to Israel, Details of Conditions in Captivity Emerge</p>
+                                    <p>As Freed Hostages Return to Israel, Details of Conditions in Captivity Emerge
+                                    </p>
                                 </a></li>
                             <li><a href="#!">
                                     <!-- 3 -->
@@ -452,58 +449,62 @@
                             <li><a href="#!">
                                     <!-- 4 -->
                                     <p>4</p>
-                                    <p>Irish-Israeli Hostage Emily Hand, 9, Is Reunited With Her Father After Release
+                                    <p>Irish-Israeli Hostage Emily Hand, 9, Is Reunited With Her Father After
+                                        Release
                                     </p>
                                 </a></li>
                         </ul>
                     </div>
                 </div>
             </div>
+        </section>
+
+    </div>
+
+
+
+    <div class="line fifth_line"></div>
+    <div class="Featured">
+        <div class="Featured_tit title_all">
+            <h1>Featured</h1>
         </div>
-
-
-        <div class="line fifth_line"></div>
-        <div class="Featured">
-            <div class="Featured_tit title_all">
-                <h1>Featured</h1>
+        <a href="#!" class="Featured_box1 Featured_box">
+            <div class="Featured_img">
+                <img src="./public/images/Featured_img1.jpg" alt="">
             </div>
-            <a href="#!" class="Featured_box1 Featured_box">
-                <div class="Featured_img">
-                    <img src="./public/images/Featured_img1.jpg" alt="">
-                </div>
-                <div class="Featured_txt">
-                    <p>Paul Ryan: All Pumped Up for His Closeup</p>
-                </div>
-            </a>
+            <div class="Featured_txt">
+                <p>Paul Ryan: All Pumped Up for His Closeup</p>
+            </div>
+        </a>
 
-            <a href="#!" class="Featured_box2 Featured_box">
-                <div class="Featured_img">
-                    <img src="./public/images/Featured_img2.jpg" alt="">
-                </div>
-                <div class="Featured_txt">
-                    <p>Best Foreign Language Feature</p>
-                </div>
-            </a>
+        <a href="#!" class="Featured_box2 Featured_box">
+            <div class="Featured_img">
+                <img src="./public/images/Featured_img2.jpg" alt="">
+            </div>
+            <div class="Featured_txt">
+                <p>Best Foreign Language Feature</p>
+            </div>
+        </a>
 
-            <a href="#!" class="Featured_box3 Featured_box">
-                <div class="Featured_img">
-                    <img src="./public/images/Featured_img3.jpg" alt="">
-                </div>
-                <div class="Featured_txt">
-                    <p>Google Plus' Best Feature Is Coming Back From the Dead</p>
-                </div>
-            </a>
+        <a href="#!" class="Featured_box3 Featured_box">
+            <div class="Featured_img">
+                <img src="./public/images/Featured_img3.jpg" alt="">
+            </div>
+            <div class="Featured_txt">
+                <p>Google Plus' Best Feature Is Coming Back From the Dead</p>
+            </div>
+        </a>
 
-            <a href="#!" class="Featured_box4 Featured_box">
-                <div class="Featured_img">
-                    <img src="./public/images/Featured_img4.jpg" alt="">
-                </div>
-                <div class="Featured_txt">
-                    <p>Rings ‘n’ Things: 10 Best Facts About the Olympics in Pop Culture</p>
-                </div>
-            </a>
-        </div>
-    </section>
+        <a href="#!" class="Featured_box4 Featured_box">
+            <div class="Featured_img">
+                <img src="./public/images/Featured_img4.jpg" alt="">
+            </div>
+            <div class="Featured_txt">
+                <p>Rings ‘n’ Things: 10 Best Facts About the Olympics in Pop Culture</p>
+            </div>
+        </a>
+    </div>
+
 
     <!-- 반응형 구상을 위해서 bottom box에서 short list 추출 -->
 
