--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- css 연결 -->
     <link rel="stylesheet" href="./style.css">
 
-    <!-- JS 연결 -->
+    <!-- JS 연결  -->
     <script src="./index.js"></script>
 
 
@@ -200,7 +200,9 @@
 
             <article class="article_box">
                 <h1>Person of the Year: Barack Obama, Architect of the New America</h1>
-                <p>The American people have rightly been frustrated at the pace of change, and the economy is still struggling, and this President we elected is imperfect. ‘Obama says.’ ‘And yet despite all that, this is who we want to be.’ <p class="italic">By Michael Scherer</p>
+                <p>The American people have rightly been frustrated at the pace of change, and the economy is still
+                    struggling, and this President we elected is imperfect. ‘Obama says.’ ‘And yet despite all that,
+                    this is who we want to be.’ <p class="italic">By Michael Scherer</p>
                 </p>
             </article>
 
