--- a/index.html
+++ b/index.html
@@ -137,38 +137,30 @@
     </nav>
 
 
+    <header class="header_mobile">
 
-    <!-- 
-    <nav class="navbar_box">
+        <section class="header_top">
 
-        <nav class="navbar_mobile">
-            <i class="xi-bars"></i>
-        </nav>
+            <nav class="navbar_mobile">
+                <i class="xi-bars"></i>
+            </nav>
 
-        <hr />
+            <h1 class="title"><a href="#">TIME</a></h1>
 
-        <nav class="navbar_web">
-            <ul>
-                <li><a href="#">NEWFEED</a></li>
-                <li><a href="#">U.S.</a></li>
-                <li><a href="#">POLITICS</a></li>
-                <li><a href="#">WORLD</a></li>
-                <li><a href="#">BUSINESS</a></li>
-                <li><a href="#">TECH</a></li>
-                <li><a href="#">HEALTH</a></li>
-                <li><a href="#">SCIENCE</a></li>
-                <li><a href="#">ENTERTAINMENT</a></li>
-                <li><a href="#">STYLE</a></li>
-                <li><a href="#">SPORTS</a></li>
-                <li><a href="#">OPINION</a></li>
-                <li><a href="#">PHOTOS</a></li>
-            </ul>
-        </nav>
+        </section>
 
-        <hr class="hr_solid" />
 
-    </nav>
- -->
+        <section class="search_box">
+            <i class="xi-search"></i>
+            <p class="search_title">Search TIME</p>
+            <button class="search_btn">Go</button>
+        </section>
+
+    </header>
+
+
+
+
 
 
 
