--- a/index.html
+++ b/index.html
@@ -139,15 +139,7 @@
 
     <header class="header_tab">
 
-        <section class="header_top_tab">
-
-            <div class="ad">
-                <a href="#">
-                    <img src="./public/images/sub_ad_img.png" alt="ad">
-                </a>
-            </div>
-
-            <h1 class="title"><a href="#">TIME</a></h1>
+        <div class="header_top_tab">
 
             <section class="icon_box">
 
@@ -183,23 +175,41 @@
 
             </section>
 
-        </section>
+            <h1 class="title"><a href="#">TIME</a></h1>
+
+            <div class="ad">
+                <a href="#">
+                    <img src="./public/images/sub_ad_img.png" alt="ad">
+                </a>
+            </div>
+
+        </div>
 
 
+
+        <hr>
 
 
         <section class="header_bottom_tab">
 
+            <section>
+                <p>SECTION</p>
+            </section>
+
+
+            <section class="search_box">
+                <i class="xi-search"></i>
+                <p class="search_title">Search TIME</p>
+                <button class="search_btn">Go</button>
+            </section>
+
         </section>
+
+        <hr class="hr_solid" />
 
 
 
     </header>
-
-
-
-
-
 
 
     <header class="header_mobile">
