--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 <body>
 
 
+
     <header class="header_web">
 
         <div class="ad">
@@ -192,8 +193,9 @@
 
         <section class="header_bottom_tab">
 
-            <section>
-                <p>SECTION</p>
+            <section class="menu_box">
+                <p class="menu_title">SECTIONS</p>
+                <i class="fas fa-caret-right"></i>
             </section>
 
 
