--- a/index.html
+++ b/index.html
@@ -35,107 +35,111 @@
 <body>
 
 
+    <div class="wrap_header">
 
-    <header class="header_web">
+        <header class="header_web">
 
-        <div class="ad">
-            <a href="#">
-                <img src="./public/images/sub_ad_img.png" alt="ad">
-            </a>
-        </div>
-
-
-        <div class="lnb_box">
-
-            <div class="top_lnb">
-                <ul>
-                    <li><a class="point_lnb" href="#">Feature</a></li>
-                    <li><a href="#">Top 10 of Everything</a></li>
-                    <li><a href="#">Best invention</a></li>
-                </ul>
+            <div class="ad">
+                <a href="#">
+                    <img src="./public/images/sub_ad_img.png" alt="ad">
+                </a>
             </div>
 
-            <div class="bottom_lnb">
-                <ul>
-                    <li><a href="#">Magazine</a></li>
-                    <li><a href="#">Video</a></li>
-                    <li><a href="#">LIFE</a></li>
-                    <li><a href="#">Person of the Year</a></li>
-                </ul>
+
+            <div class="lnb_box">
+
+                <div class="top_lnb">
+                    <ul>
+                        <li><a class="point_lnb" href="#">Feature</a></li>
+                        <li><a href="#">Top 10 of Everything</a></li>
+                        <li><a href="#">Best invention</a></li>
+                    </ul>
+                </div>
+
+                <div class="bottom_lnb">
+                    <ul>
+                        <li><a href="#">Magazine</a></li>
+                        <li><a href="#">Video</a></li>
+                        <li><a href="#">LIFE</a></li>
+                        <li><a href="#">Person of the Year</a></li>
+                    </ul>
+                </div>
+
             </div>
 
-        </div>
+
+            <h1 class="title"><a href="#">TIME</a></h1>
 
 
-        <h1 class="title"><a href="#">TIME</a></h1>
+            <div class="sns_box">
 
+                <section class="icon_box">
 
-        <div class="sns_box">
+                    <ul>
+                        <li>
+                            <a href="#"><img src="./public/images/sns_img01.png" alt="sns01"></a>
+                        </li>
 
-            <section class="icon_box">
+                        <li>
+                            <a href="#"><img src="./public/images/sns_img02.png" alt="sns02"></a>
+                        </li>
 
-                <ul>
-                    <li>
-                        <a href="#"><img src="./public/images/sns_img01.png" alt="sns01"></a>
-                    </li>
+                        <li>
+                            <a href="#"><img src="./public/images/sns_img03.png" alt="sns03"></a>
+                        </li>
 
-                    <li>
-                        <a href="#"><img src="./public/images/sns_img02.png" alt="sns02"></a>
-                    </li>
+                        <li>
+                            <a href="#"><img src="./public/images/sns_img04.png" alt="sns04"></a>
+                        </li>
 
-                    <li>
-                        <a href="#"><img src="./public/images/sns_img03.png" alt="sns03"></a>
-                    </li>
+                        <li>
+                            <a href="#"><img src="./public/images/sns_img05.png" alt="sns05"></a>
+                        </li>
 
-                    <li>
-                        <a href="#"><img src="./public/images/sns_img04.png" alt="sns04"></a>
-                    </li>
-
-                    <li>
-                        <a href="#"><img src="./public/images/sns_img05.png" alt="sns05"></a>
-                    </li>
-
-                    <li>
-                        <a href="#"><img src="./public/images/sns_img06.png" alt="sns06"></a>
-                    </li>
-                </ul>
+                        <li>
+                            <a href="#"><img src="./public/images/sns_img06.png" alt="sns06"></a>
+                        </li>
+                    </ul>
 
 
 
 
 
-            </section>
+                </section>
 
-            <section class="search_box">
-                <i class="xi-search"></i>
-                <p class="search_title">Search TIME</p>
-                <button class="search_btn">Go</button>
-            </section>
+                <section class="search_box">
+                    <i class="xi-search"></i>
+                    <p class="search_title">Search TIME</p>
+                    <button class="search_btn">Go</button>
+                </section>
 
-        </div>
+            </div>
 
-    </header>
+        </header>
+
+        <nav class="navbar_web">
+            <hr />
+            <ul>
+                <li><a href="#">NEWFEED</a></li>
+                <li><a href="#">U.S.</a></li>
+                <li><a href="#">POLITICS</a></li>
+                <li><a href="#">WORLD</a></li>
+                <li><a href="#">BUSINESS</a></li>
+                <li><a href="#">TECH</a></li>
+                <li><a href="#">HEALTH</a></li>
+                <li><a href="#">SCIENCE</a></li>
+                <li><a href="#">ENTERTAINMENT</a></li>
+                <li><a href="#">STYLE</a></li>
+                <li><a href="#">SPORTS</a></li>
+                <li><a href="#">OPINION</a></li>
+                <li><a href="#">PHOTOS</a></li>
+            </ul>
+            <hr class="hr_solid" />
+        </nav>
+
+    </div>
 
 
-    <nav class="navbar_web">
-        <hr />
-        <ul>
-            <li><a href="#">NEWFEED</a></li>
-            <li><a href="#">U.S.</a></li>
-            <li><a href="#">POLITICS</a></li>
-            <li><a href="#">WORLD</a></li>
-            <li><a href="#">BUSINESS</a></li>
-            <li><a href="#">TECH</a></li>
-            <li><a href="#">HEALTH</a></li>
-            <li><a href="#">SCIENCE</a></li>
-            <li><a href="#">ENTERTAINMENT</a></li>
-            <li><a href="#">STYLE</a></li>
-            <li><a href="#">SPORTS</a></li>
-            <li><a href="#">OPINION</a></li>
-            <li><a href="#">PHOTOS</a></li>
-        </ul>
-        <hr class="hr_solid" />
-    </nav>
 
 
     <header class="header_tab">
